syntax = "proto3";

option csharp_namespace = "Com.iDonCareBoston.AccountService.Services.Grpc";

package users;

import "google/protobuf/timestamp.proto";


service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string user_id = 1;
    string email = 2;
    string status = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateUserRequest {
  string email = 1;
  string status = 2;
}

message CreateUserResponse {
  string user_id = 1;
}